parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    CTESTRING
    DRAWARC
    ADDAT
    SCALEUP
    MOVEFIGURE
    BLACK
    SCALEDOWN
    DRAWRECTANGLE
    APPEND
    BLUE
    DRAWCIRCLE
    DRAWLINE
    ROTATEFIGURE
    DRAWSQUARE
    ERASE
    RED
    ORANGE
    THICK
    THIN
    MEDIUM
    REMOVEFIRST
    CHANGECOLOR
    YELLOW
    PREPEND
    CHANGETHICKNESS
    REMOVELAST
    PURPLE
    REMOVEAT
    GREEN
    MOD

Grammar

Rule 0     S' -> program
Rule 1     program -> more_vars more_func main
Rule 2     vars -> var_type to_actual_type ID to_var_table SEMICOLON vars
Rule 3     vars -> <empty>
Rule 4     to_ids_set -> <empty>
Rule 5     to_actual_type -> <empty>
Rule 6     to_var_table -> <empty>
Rule 7     more_vars -> vars
Rule 8     more_vars -> <empty>
Rule 9     var_type -> INT
Rule 10    var_type -> DOUBLE
Rule 11    var_type -> BOOL
Rule 12    var_type -> INTLIST
Rule 13    var_type -> DOUBLELIST
Rule 14    func -> FUNC func_type ID procedure_name LPAR pars RPAR func_block more_func
Rule 15    func_type -> INT
Rule 16    func_type -> DOUBLE
Rule 17    func_type -> BOOL
Rule 18    func_type -> VOID
Rule 19    procedure_name -> <empty>
Rule 20    pars -> pars_comp
Rule 21    pars -> <empty>
Rule 22    pars_comp -> var_type ID to_var_table more_pars
Rule 23    more_pars -> COMMA pars_comp
Rule 24    more_pars -> <empty>
Rule 25    func_block -> LBRACKET more_vars more_statements RETURN var_cte SEMICOLON RBRACKET
Rule 26    func_block -> <empty>
Rule 27    more_func -> func
Rule 28    more_func -> <empty>
Rule 29    more_statements -> statement
Rule 30    more_statements -> <empty>
Rule 31    statement -> statement_comp more_statements
Rule 32    statement_comp -> assignation
Rule 33    statement_comp -> condition
Rule 34    statement_comp -> cycle
Rule 35    statement_comp -> read
Rule 36    statement_comp -> write
Rule 37    statement_comp -> function
Rule 38    assignation -> ID EQUALS expression SEMICOLON
Rule 39    condition -> IF LPAR expression RPAR block condition_comp
Rule 40    condition_comp -> ELSE block
Rule 41    condition_comp -> <empty>
Rule 42    cycle -> WHILE LPAR expression RPAR block
Rule 43    read -> READ LPAR var_cte RPAR SEMICOLON
Rule 44    write -> WRITE LPAR var_comp RPAR SEMICOLON
Rule 45    var_comp -> function_call
Rule 46    var_comp -> var_cte
Rule 47    function -> ID LPAR func_params RPAR SEMICOLON
Rule 48    func_params -> var_comp var_more
Rule 49    func_params -> <empty>
Rule 50    var_more -> COMMA var_comp var_more
Rule 51    var_more -> <empty>
Rule 52    expression -> comp expression_comp
Rule 53    expression_comp -> andor comp
Rule 54    expression_comp -> <empty>
Rule 55    andor -> AND
Rule 56    andor -> OR
Rule 57    comp -> exp exp_comp
Rule 58    exp_comp -> comparator exp
Rule 59    exp_comp -> <empty>
Rule 60    comparator -> GREATER
Rule 61    comparator -> FEWER
Rule 62    comparator -> GREATEROREQUAL
Rule 63    comparator -> FEWEROREQUAL
Rule 64    comparator -> DIFFERENT
Rule 65    comparator -> EQUALEQUALS
Rule 66    exp -> term more_term
Rule 67    more_term -> operator exp
Rule 68    more_term -> <empty>
Rule 69    operator -> PLUS
Rule 70    operator -> MINUS
Rule 71    term -> factor more_factor
Rule 72    more_factor -> multiplier term
Rule 73    more_factor -> <empty>
Rule 74    multiplier -> MULTIPLICATION
Rule 75    multiplier -> DIVISION
Rule 76    factor -> LPAR exp RPAR
Rule 77    factor -> var_cte
Rule 78    var_cte -> CTEINT
Rule 79    var_cte -> CTEDOUBLE
Rule 80    var_cte -> ID
Rule 81    var_cte -> cte_bool
Rule 82    var_cte -> function_call
Rule 83    cte_bool -> TRUE
Rule 84    cte_bool -> FALSE
Rule 85    block -> LBRACKET more_statements RBRACKET
Rule 86    main -> MAIN procedure_name main_block
Rule 87    main_block -> LBRACKET more_vars more_statements RBRACKET
Rule 88    function_call -> ID LPAR func_params RPAR

Terminals, with rules where they appear

ADDAT                : 
AND                  : 55
APPEND               : 
BLACK                : 
BLUE                 : 
BOOL                 : 11 17
CHANGECOLOR          : 
CHANGETHICKNESS      : 
COMMA                : 23 50
CTEDOUBLE            : 79
CTEINT               : 78
CTESTRING            : 
DIFFERENT            : 64
DIVISION             : 75
DOUBLE               : 10 16
DOUBLELIST           : 13
DRAWARC              : 
DRAWCIRCLE           : 
DRAWLINE             : 
DRAWRECTANGLE        : 
DRAWSQUARE           : 
ELSE                 : 40
EQUALEQUALS          : 65
EQUALS               : 38
ERASE                : 
FALSE                : 84
FEWER                : 61
FEWEROREQUAL         : 63
FUNC                 : 14
GREATER              : 60
GREATEROREQUAL       : 62
GREEN                : 
ID                   : 2 14 22 38 47 80 88
IF                   : 39
INT                  : 9 15
INTLIST              : 12
LBRACKET             : 25 85 87
LPAR                 : 14 39 42 43 44 47 76 88
MAIN                 : 86
MEDIUM               : 
MINUS                : 70
MOD                  : 
MOVEFIGURE           : 
MULTIPLICATION       : 74
OR                   : 56
ORANGE               : 
PLUS                 : 69
PREPEND              : 
PURPLE               : 
RBRACKET             : 25 85 87
READ                 : 43
RED                  : 
REMOVEAT             : 
REMOVEFIRST          : 
REMOVELAST           : 
RETURN               : 25
ROTATEFIGURE         : 
RPAR                 : 14 39 42 43 44 47 76 88
SCALEDOWN            : 
SCALEUP              : 
SEMICOLON            : 2 25 38 43 44 47
THICK                : 
THIN                 : 
TRUE                 : 83
VOID                 : 18
WHILE                : 42
WRITE                : 44
YELLOW               : 
error                : 

Nonterminals, with rules where they appear

andor                : 53
assignation          : 32
block                : 39 40 42
comp                 : 52 53
comparator           : 58
condition            : 33
condition_comp       : 39
cte_bool             : 81
cycle                : 34
exp                  : 57 58 67 76
exp_comp             : 57
expression           : 38 39 42
expression_comp      : 52
factor               : 71
func                 : 27
func_block           : 14
func_params          : 47 88
func_type            : 14
function             : 37
function_call        : 45 82
main                 : 1
main_block           : 86
more_factor          : 71
more_func            : 1 14
more_pars            : 22
more_statements      : 25 31 85 87
more_term            : 66
more_vars            : 1 25 87
multiplier           : 72
operator             : 67
pars                 : 14
pars_comp            : 20 23
procedure_name       : 14 86
program              : 0
read                 : 35
statement            : 29
statement_comp       : 31
term                 : 66 72
to_actual_type       : 2
to_ids_set           : 
to_var_table         : 2 22
var_comp             : 44 48 50
var_cte              : 25 43 46 77
var_more             : 48 50
var_type             : 2 22
vars                 : 2 7
write                : 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . more_vars more_func main
    (7) more_vars -> . vars
    (8) more_vars -> .
    (2) vars -> . var_type to_actual_type ID to_var_table SEMICOLON vars
    (3) vars -> .
    (9) var_type -> . INT
    (10) var_type -> . DOUBLE
    (11) var_type -> . BOOL
    (12) var_type -> . INTLIST
    (13) var_type -> . DOUBLELIST

  ! reduce/reduce conflict for FUNC resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for MAIN resolved using rule 3 (vars -> .)
    FUNC            reduce using rule 3 (vars -> .)
    MAIN            reduce using rule 3 (vars -> .)
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4
    BOOL            shift and go to state 6
    INTLIST         shift and go to state 7
    DOUBLELIST      shift and go to state 8

  ! FUNC            [ reduce using rule 8 (more_vars -> .) ]
  ! MAIN            [ reduce using rule 8 (more_vars -> .) ]

    vars                           shift and go to state 1
    var_type                       shift and go to state 2
    program                        shift and go to state 5
    more_vars                      shift and go to state 9

state 1

    (7) more_vars -> vars .

    ID              reduce using rule 7 (more_vars -> vars .)
    IF              reduce using rule 7 (more_vars -> vars .)
    WHILE           reduce using rule 7 (more_vars -> vars .)
    READ            reduce using rule 7 (more_vars -> vars .)
    WRITE           reduce using rule 7 (more_vars -> vars .)
    RBRACKET        reduce using rule 7 (more_vars -> vars .)
    FUNC            reduce using rule 7 (more_vars -> vars .)
    MAIN            reduce using rule 7 (more_vars -> vars .)
    RETURN          reduce using rule 7 (more_vars -> vars .)


state 2

    (2) vars -> var_type . to_actual_type ID to_var_table SEMICOLON vars
    (5) to_actual_type -> .

    ID              reduce using rule 5 (to_actual_type -> .)

    to_actual_type                 shift and go to state 10

state 3

    (9) var_type -> INT .

    ID              reduce using rule 9 (var_type -> INT .)


state 4

    (10) var_type -> DOUBLE .

    ID              reduce using rule 10 (var_type -> DOUBLE .)


state 5

    (0) S' -> program .



state 6

    (11) var_type -> BOOL .

    ID              reduce using rule 11 (var_type -> BOOL .)


state 7

    (12) var_type -> INTLIST .

    ID              reduce using rule 12 (var_type -> INTLIST .)


state 8

    (13) var_type -> DOUBLELIST .

    ID              reduce using rule 13 (var_type -> DOUBLELIST .)


state 9

    (1) program -> more_vars . more_func main
    (27) more_func -> . func
    (28) more_func -> .
    (14) func -> . FUNC func_type ID procedure_name LPAR pars RPAR func_block more_func

    MAIN            reduce using rule 28 (more_func -> .)
    FUNC            shift and go to state 13

    more_func                      shift and go to state 12
    func                           shift and go to state 11

state 10

    (2) vars -> var_type to_actual_type . ID to_var_table SEMICOLON vars

    ID              shift and go to state 14


state 11

    (27) more_func -> func .

    MAIN            reduce using rule 27 (more_func -> func .)


state 12

    (1) program -> more_vars more_func . main
    (86) main -> . MAIN procedure_name main_block

    MAIN            shift and go to state 16

    main                           shift and go to state 15

state 13

    (14) func -> FUNC . func_type ID procedure_name LPAR pars RPAR func_block more_func
    (15) func_type -> . INT
    (16) func_type -> . DOUBLE
    (17) func_type -> . BOOL
    (18) func_type -> . VOID

    INT             shift and go to state 20
    DOUBLE          shift and go to state 18
    BOOL            shift and go to state 21
    VOID            shift and go to state 19

    func_type                      shift and go to state 17

state 14

    (2) vars -> var_type to_actual_type ID . to_var_table SEMICOLON vars
    (6) to_var_table -> .

    SEMICOLON       reduce using rule 6 (to_var_table -> .)

    to_var_table                   shift and go to state 22

state 15

    (1) program -> more_vars more_func main .

    $end            reduce using rule 1 (program -> more_vars more_func main .)


state 16

    (86) main -> MAIN . procedure_name main_block
    (19) procedure_name -> .

    LBRACKET        reduce using rule 19 (procedure_name -> .)

    procedure_name                 shift and go to state 23

state 17

    (14) func -> FUNC func_type . ID procedure_name LPAR pars RPAR func_block more_func

    ID              shift and go to state 24


state 18

    (16) func_type -> DOUBLE .

    ID              reduce using rule 16 (func_type -> DOUBLE .)


state 19

    (18) func_type -> VOID .

    ID              reduce using rule 18 (func_type -> VOID .)


state 20

    (15) func_type -> INT .

    ID              reduce using rule 15 (func_type -> INT .)


state 21

    (17) func_type -> BOOL .

    ID              reduce using rule 17 (func_type -> BOOL .)


state 22

    (2) vars -> var_type to_actual_type ID to_var_table . SEMICOLON vars

    SEMICOLON       shift and go to state 25


state 23

    (86) main -> MAIN procedure_name . main_block
    (87) main_block -> . LBRACKET more_vars more_statements RBRACKET

    LBRACKET        shift and go to state 27

    main_block                     shift and go to state 26

state 24

    (14) func -> FUNC func_type ID . procedure_name LPAR pars RPAR func_block more_func
    (19) procedure_name -> .

    LPAR            reduce using rule 19 (procedure_name -> .)

    procedure_name                 shift and go to state 28

state 25

    (2) vars -> var_type to_actual_type ID to_var_table SEMICOLON . vars
    (2) vars -> . var_type to_actual_type ID to_var_table SEMICOLON vars
    (3) vars -> .
    (9) var_type -> . INT
    (10) var_type -> . DOUBLE
    (11) var_type -> . BOOL
    (12) var_type -> . INTLIST
    (13) var_type -> . DOUBLELIST

    FUNC            reduce using rule 3 (vars -> .)
    MAIN            reduce using rule 3 (vars -> .)
    ID              reduce using rule 3 (vars -> .)
    IF              reduce using rule 3 (vars -> .)
    WHILE           reduce using rule 3 (vars -> .)
    READ            reduce using rule 3 (vars -> .)
    WRITE           reduce using rule 3 (vars -> .)
    RBRACKET        reduce using rule 3 (vars -> .)
    RETURN          reduce using rule 3 (vars -> .)
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4
    BOOL            shift and go to state 6
    INTLIST         shift and go to state 7
    DOUBLELIST      shift and go to state 8

    vars                           shift and go to state 29
    var_type                       shift and go to state 2

state 26

    (86) main -> MAIN procedure_name main_block .

    $end            reduce using rule 86 (main -> MAIN procedure_name main_block .)


state 27

    (87) main_block -> LBRACKET . more_vars more_statements RBRACKET
    (7) more_vars -> . vars
    (8) more_vars -> .
    (2) vars -> . var_type to_actual_type ID to_var_table SEMICOLON vars
    (3) vars -> .
    (9) var_type -> . INT
    (10) var_type -> . DOUBLE
    (11) var_type -> . BOOL
    (12) var_type -> . INTLIST
    (13) var_type -> . DOUBLELIST

  ! reduce/reduce conflict for ID resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for IF resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for READ resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for WRITE resolved using rule 3 (vars -> .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 3 (vars -> .)
    ID              reduce using rule 3 (vars -> .)
    IF              reduce using rule 3 (vars -> .)
    WHILE           reduce using rule 3 (vars -> .)
    READ            reduce using rule 3 (vars -> .)
    WRITE           reduce using rule 3 (vars -> .)
    RBRACKET        reduce using rule 3 (vars -> .)
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4
    BOOL            shift and go to state 6
    INTLIST         shift and go to state 7
    DOUBLELIST      shift and go to state 8

  ! ID              [ reduce using rule 8 (more_vars -> .) ]
  ! IF              [ reduce using rule 8 (more_vars -> .) ]
  ! WHILE           [ reduce using rule 8 (more_vars -> .) ]
  ! READ            [ reduce using rule 8 (more_vars -> .) ]
  ! WRITE           [ reduce using rule 8 (more_vars -> .) ]
  ! RBRACKET        [ reduce using rule 8 (more_vars -> .) ]

    vars                           shift and go to state 1
    var_type                       shift and go to state 2
    more_vars                      shift and go to state 30

state 28

    (14) func -> FUNC func_type ID procedure_name . LPAR pars RPAR func_block more_func

    LPAR            shift and go to state 31


state 29

    (2) vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .

    ID              reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    IF              reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    WHILE           reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    READ            reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    WRITE           reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    RBRACKET        reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    FUNC            reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    MAIN            reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)
    RETURN          reduce using rule 2 (vars -> var_type to_actual_type ID to_var_table SEMICOLON vars .)


state 30

    (87) main_block -> LBRACKET more_vars . more_statements RBRACKET
    (29) more_statements -> . statement
    (30) more_statements -> .
    (31) statement -> . statement_comp more_statements
    (32) statement_comp -> . assignation
    (33) statement_comp -> . condition
    (34) statement_comp -> . cycle
    (35) statement_comp -> . read
    (36) statement_comp -> . write
    (37) statement_comp -> . function
    (38) assignation -> . ID EQUALS expression SEMICOLON
    (39) condition -> . IF LPAR expression RPAR block condition_comp
    (42) cycle -> . WHILE LPAR expression RPAR block
    (43) read -> . READ LPAR var_cte RPAR SEMICOLON
    (44) write -> . WRITE LPAR var_comp RPAR SEMICOLON
    (47) function -> . ID LPAR func_params RPAR SEMICOLON

    RBRACKET        reduce using rule 30 (more_statements -> .)
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 33
    READ            shift and go to state 32
    WRITE           shift and go to state 41

    function                       shift and go to state 39
    assignation                    shift and go to state 45
    read                           shift and go to state 40
    write                          shift and go to state 36
    statement                      shift and go to state 37
    statement_comp                 shift and go to state 34
    cycle                          shift and go to state 38
    condition                      shift and go to state 43
    more_statements                shift and go to state 35

state 31

    (14) func -> FUNC func_type ID procedure_name LPAR . pars RPAR func_block more_func
    (20) pars -> . pars_comp
    (21) pars -> .
    (22) pars_comp -> . var_type ID to_var_table more_pars
    (9) var_type -> . INT
    (10) var_type -> . DOUBLE
    (11) var_type -> . BOOL
    (12) var_type -> . INTLIST
    (13) var_type -> . DOUBLELIST

    RPAR            reduce using rule 21 (pars -> .)
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4
    BOOL            shift and go to state 6
    INTLIST         shift and go to state 7
    DOUBLELIST      shift and go to state 8

    var_type                       shift and go to state 46
    pars                           shift and go to state 47
    pars_comp                      shift and go to state 48

state 32

    (43) read -> READ . LPAR var_cte RPAR SEMICOLON

    LPAR            shift and go to state 49


state 33

    (42) cycle -> WHILE . LPAR expression RPAR block

    LPAR            shift and go to state 50


state 34

    (31) statement -> statement_comp . more_statements
    (29) more_statements -> . statement
    (30) more_statements -> .
    (31) statement -> . statement_comp more_statements
    (32) statement_comp -> . assignation
    (33) statement_comp -> . condition
    (34) statement_comp -> . cycle
    (35) statement_comp -> . read
    (36) statement_comp -> . write
    (37) statement_comp -> . function
    (38) assignation -> . ID EQUALS expression SEMICOLON
    (39) condition -> . IF LPAR expression RPAR block condition_comp
    (42) cycle -> . WHILE LPAR expression RPAR block
    (43) read -> . READ LPAR var_cte RPAR SEMICOLON
    (44) write -> . WRITE LPAR var_comp RPAR SEMICOLON
    (47) function -> . ID LPAR func_params RPAR SEMICOLON

    RBRACKET        reduce using rule 30 (more_statements -> .)
    RETURN          reduce using rule 30 (more_statements -> .)
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 33
    READ            shift and go to state 32
    WRITE           shift and go to state 41

    function                       shift and go to state 39
    assignation                    shift and go to state 45
    read                           shift and go to state 40
    write                          shift and go to state 36
    statement                      shift and go to state 37
    statement_comp                 shift and go to state 34
    more_statements                shift and go to state 51
    condition                      shift and go to state 43
    cycle                          shift and go to state 38

state 35

    (87) main_block -> LBRACKET more_vars more_statements . RBRACKET

    RBRACKET        shift and go to state 52


state 36

    (36) statement_comp -> write .

    ID              reduce using rule 36 (statement_comp -> write .)
    IF              reduce using rule 36 (statement_comp -> write .)
    WHILE           reduce using rule 36 (statement_comp -> write .)
    READ            reduce using rule 36 (statement_comp -> write .)
    WRITE           reduce using rule 36 (statement_comp -> write .)
    RBRACKET        reduce using rule 36 (statement_comp -> write .)
    RETURN          reduce using rule 36 (statement_comp -> write .)


state 37

    (29) more_statements -> statement .

    RBRACKET        reduce using rule 29 (more_statements -> statement .)
    RETURN          reduce using rule 29 (more_statements -> statement .)


state 38

    (34) statement_comp -> cycle .

    ID              reduce using rule 34 (statement_comp -> cycle .)
    IF              reduce using rule 34 (statement_comp -> cycle .)
    WHILE           reduce using rule 34 (statement_comp -> cycle .)
    READ            reduce using rule 34 (statement_comp -> cycle .)
    WRITE           reduce using rule 34 (statement_comp -> cycle .)
    RBRACKET        reduce using rule 34 (statement_comp -> cycle .)
    RETURN          reduce using rule 34 (statement_comp -> cycle .)


state 39

    (37) statement_comp -> function .

    ID              reduce using rule 37 (statement_comp -> function .)
    IF              reduce using rule 37 (statement_comp -> function .)
    WHILE           reduce using rule 37 (statement_comp -> function .)
    READ            reduce using rule 37 (statement_comp -> function .)
    WRITE           reduce using rule 37 (statement_comp -> function .)
    RBRACKET        reduce using rule 37 (statement_comp -> function .)
    RETURN          reduce using rule 37 (statement_comp -> function .)


state 40

    (35) statement_comp -> read .

    ID              reduce using rule 35 (statement_comp -> read .)
    IF              reduce using rule 35 (statement_comp -> read .)
    WHILE           reduce using rule 35 (statement_comp -> read .)
    READ            reduce using rule 35 (statement_comp -> read .)
    WRITE           reduce using rule 35 (statement_comp -> read .)
    RBRACKET        reduce using rule 35 (statement_comp -> read .)
    RETURN          reduce using rule 35 (statement_comp -> read .)


state 41

    (44) write -> WRITE . LPAR var_comp RPAR SEMICOLON

    LPAR            shift and go to state 53


state 42

    (38) assignation -> ID . EQUALS expression SEMICOLON
    (47) function -> ID . LPAR func_params RPAR SEMICOLON

    EQUALS          shift and go to state 55
    LPAR            shift and go to state 54


state 43

    (33) statement_comp -> condition .

    ID              reduce using rule 33 (statement_comp -> condition .)
    IF              reduce using rule 33 (statement_comp -> condition .)
    WHILE           reduce using rule 33 (statement_comp -> condition .)
    READ            reduce using rule 33 (statement_comp -> condition .)
    WRITE           reduce using rule 33 (statement_comp -> condition .)
    RBRACKET        reduce using rule 33 (statement_comp -> condition .)
    RETURN          reduce using rule 33 (statement_comp -> condition .)


state 44

    (39) condition -> IF . LPAR expression RPAR block condition_comp

    LPAR            shift and go to state 56


state 45

    (32) statement_comp -> assignation .

    ID              reduce using rule 32 (statement_comp -> assignation .)
    IF              reduce using rule 32 (statement_comp -> assignation .)
    WHILE           reduce using rule 32 (statement_comp -> assignation .)
    READ            reduce using rule 32 (statement_comp -> assignation .)
    WRITE           reduce using rule 32 (statement_comp -> assignation .)
    RBRACKET        reduce using rule 32 (statement_comp -> assignation .)
    RETURN          reduce using rule 32 (statement_comp -> assignation .)


state 46

    (22) pars_comp -> var_type . ID to_var_table more_pars

    ID              shift and go to state 57


state 47

    (14) func -> FUNC func_type ID procedure_name LPAR pars . RPAR func_block more_func

    RPAR            shift and go to state 58


state 48

    (20) pars -> pars_comp .

    RPAR            reduce using rule 20 (pars -> pars_comp .)


state 49

    (43) read -> READ LPAR . var_cte RPAR SEMICOLON
    (78) var_cte -> . CTEINT
    (79) var_cte -> . CTEDOUBLE
    (80) var_cte -> . ID
    (81) var_cte -> . cte_bool
    (82) var_cte -> . function_call
    (83) cte_bool -> . TRUE
    (84) cte_bool -> . FALSE
    (88) function_call -> . ID LPAR func_params RPAR

    CTEINT          shift and go to state 61
    CTEDOUBLE       shift and go to state 59
    ID              shift and go to state 66
    TRUE            shift and go to state 65
    FALSE           shift and go to state 60

    cte_bool                       shift and go to state 62
    function_call                  shift and go to state 63
    var_cte                        shift and go to state 64

state 50
